# operating_systems

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: CMakeLists.txt
src/lab1/: main.c  main_variant_1.c  modified_for_loop.c  modified_graph.c
src/lab2/: processes.c  shared.h  threads.c  threads_emul.c
src/lab3/: task1.rs  task2.cpp  task2.sh
src/lab3/task2/: start.sh  stop.sh  task2.c
src/lab4/: rust_lab4_os.rs  test.sh
