add_executable(lab1 ./lab1/main.c)
add_executable(lab1_modified_for_loop ./lab1/modified_for_loop.c)
add_executable(lab1_modified_graph ./lab1/modified_graph.c)

add_executable(lab2_threads ./lab2/threads.c)
add_executable(lab2_threads_emul ./lab2/threads_emul.c)
add_executable(lab2_processes ./lab2/processes.c)